fix(menu-toggle): adjust avatar within menu-toggle to align correctly

--- a/src/patternfly/components/MenuToggle/menu-toggle.scss
+++ b/src/patternfly/components/MenuToggle/menu-toggle.scss
@@ -570,13 +570,8 @@
 .#{$menu-toggle}__icon {
   flex-shrink: 0;
 
-  &.pf-m-avatar {
-    .#{$avatar},
-    img,
-    svg {
-      margin-block-start: calc(var(--#{$menu-toggle}--PaddingBlockStart) * -1);
-      margin-block-end: calc(var(--#{$menu-toggle}--PaddingBlockEnd) * -1);
-    }
+  :where(picture, img) {
+    vertical-align: middle;
   }
 }
 
